Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27876

Server building fails on MacOS caused by srw_lock_impl<false> template specialization

    XMLWordPrintable

Details

    Description

      [ 59%] Building CXX object storage/innobase/CMakeFiles/innobase.dir/btr/btr0btr.cc.o
      In file included from server-10.9/storage/innobase/btr/btr0btr.cc:28:
      In file included from server-10.9/storage/innobase/include/btr0btr.h:31:
      In file included from server-10.9/storage/innobase/include/dict0dict.h:32:
      In file included from server-10.9/storage/innobase/include/dict0mem.h:45:
      In file included from server-10.9/storage/innobase/include/buf0buf.h:33:
      In file included from server-10.9/storage/innobase/include/fil0fil.h:39:
      In file included from server-10.9/storage/innobase/include/log0recv.h:31:
      server-10.9/storage/innobase/include/log0log.h:324:17: error: no member named 'is_write_locked' in 'srw_lock_impl<false>'
          ut_ad(latch.is_write_locked());
                ~~~~~ ^
      server-10.9/storage/innobase/include/ut0dbg.h:62:15: note: expanded from macro 'ut_ad'
      #define ut_ad   DBUG_SLOW_ASSERT
                      ^
      server-10.9/include/my_dbug.h:122:41: note: expanded from macro 'DBUG_SLOW_ASSERT'
      #define DBUG_SLOW_ASSERT(A) DBUG_ASSERT(A)
                                              ^
      server-10.9/include/my_dbug.h:120:18: note: expanded from macro 'DBUG_ASSERT'
        if (unlikely(!(A)) && _db_my_assert(__FILE__, __LINE__, #A)) assert(A); \
                       ^
      server-10.9/include/my_global.h:372:40: note: expanded from macro 'unlikely'
      #define unlikely(x)     __builtin_expect(((x) != 0),0)
                                                 ^
      In file included from server-10.9/storage/innobase/btr/btr0btr.cc:28:
      In file included from server-10.9/storage/innobase/include/btr0btr.h:31:
      In file included from server-10.9/storage/innobase/include/dict0dict.h:32:
      In file included from server-10.9/storage/innobase/include/dict0mem.h:45:
      In file included from server-10.9/storage/innobase/include/buf0buf.h:33:
      In file included from server-10.9/storage/innobase/include/fil0fil.h:39:
      In file included from server-10.9/storage/innobase/include/log0recv.h:31:
      server-10.9/storage/innobase/include/log0log.h:324:17: error: no member named 'is_write_locked' in 'srw_lock_impl<false>'
          ut_ad(latch.is_write_locked());
                ~~~~~ ^
      server-10.9/storage/innobase/include/ut0dbg.h:62:15: note: expanded from macro 'ut_ad'
      #define ut_ad   DBUG_SLOW_ASSERT
                      ^
      server-10.9/include/my_dbug.h:122:41: note: expanded from macro 'DBUG_SLOW_ASSERT'
      #define DBUG_SLOW_ASSERT(A) DBUG_ASSERT(A)
                                              ^
      server-10.9/include/my_dbug.h:120:71: note: expanded from macro 'DBUG_ASSERT'
        if (unlikely(!(A)) && _db_my_assert(__FILE__, __LINE__, #A)) assert(A); \
                                                                            ^
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/assert.h:99:25: note: expanded from macro 'assert'
          (__builtin_expect(!(e), 0) ? __assert_rtn(__func__, __ASSERT_FILE_NAME, __LINE__, #e) : (void)0)
                              ^
      In file included from server-10.9/storage/innobase/btr/btr0btr.cc:28:
      In file included from server-10.9/storage/innobase/include/btr0btr.h:31:
      In file included from server-10.9/storage/innobase/include/dict0dict.h:32:
      In file included from server-10.9/storage/innobase/include/dict0mem.h:45:
      In file included from server-10.9/storage/innobase/include/buf0buf.h:33:
      In file included from server-10.9/storage/innobase/include/fil0fil.h:39:
      In file included from server-10.9/storage/innobase/include/log0recv.h:31:
      server-10.9/storage/innobase/include/log0log.h:383:17: error: no member named 'is_locked' in 'srw_lock_impl<false>'
          ut_ad(latch.is_locked());
                ~~~~~ ^
      server-10.9/storage/innobase/include/ut0dbg.h:62:15: note: expanded from macro 'ut_ad'
      #define ut_ad   DBUG_SLOW_ASSERT
                      ^
      server-10.9/include/my_dbug.h:122:41: note: expanded from macro 'DBUG_SLOW_ASSERT'
      #define DBUG_SLOW_ASSERT(A) DBUG_ASSERT(A)
                                              ^
      server-10.9/include/my_dbug.h:120:18: note: expanded from macro 'DBUG_ASSERT'
        if (unlikely(!(A)) && _db_my_assert(__FILE__, __LINE__, #A)) assert(A); \
                       ^
      server-10.9/include/my_global.h:372:40: note: expanded from macro 'unlikely'
      #define unlikely(x)     __builtin_expect(((x) != 0),0)
                                                 ^
      In file included from server-10.9/storage/innobase/btr/btr0btr.cc:28:
      In file included from server-10.9/storage/innobase/include/btr0btr.h:31:
      In file included from server-10.9/storage/innobase/include/dict0dict.h:32:
      In file included from server-10.9/storage/innobase/include/dict0mem.h:45:
      In file included from server-10.9/storage/innobase/include/buf0buf.h:33:
      In file included from server-10.9/storage/innobase/include/fil0fil.h:39:
      In file included from server-10.9/storage/innobase/include/log0recv.h:31:
      server-10.9/storage/innobase/include/log0log.h:383:17: error: no member named 'is_locked' in 'srw_lock_impl<false>'
          ut_ad(latch.is_locked());
                ~~~~~ ^
      server-10.9/storage/innobase/include/ut0dbg.h:62:15: note: expanded from macro 'ut_ad'
      #define ut_ad   DBUG_SLOW_ASSERT
                      ^
      server-10.9/include/my_dbug.h:122:41: note: expanded from macro 'DBUG_SLOW_ASSERT'
      #define DBUG_SLOW_ASSERT(A) DBUG_ASSERT(A)
                                              ^
      server-10.9/include/my_dbug.h:120:71: note: expanded from macro 'DBUG_ASSERT'
        if (unlikely(!(A)) && _db_my_assert(__FILE__, __LINE__, #A)) assert(A); \
                                                                            ^
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/assert.h:99:25: note: expanded from macro 'assert'
          (__builtin_expect(!(e), 0) ? __assert_rtn(__func__, __ASSERT_FILE_NAME, __LINE__, #e) : (void)0)
                              ^
      4 errors generated.
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              shulga Dmitry Shulga
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.