MDEV-27876: SUX_LOCK_GENERIC build fails after MDEV-27774

The rw_lock_t wrapper does not define any
is_locked() or is_write_locked() predicate.
Therefore, we must add #ifndef SUX_LOCK_GENERIC
before each debug assertion that asserts that
log_sys.latch is being held by some thread
(as an approximation for asserting that
it is being held by the current thread).